# python-developer-dio

./: README.md
banking-system-challenge/: README.md  main.py
integrations-with-sqlalchemy/: README.md  pyproject.toml
integrations-with-sqlalchemy/mongo/: pymongo_application.py
integrations-with-sqlalchemy/sql/: sql_alchemy_application.py
