[tool.poetry]
name = "integration-with-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["iantoniolo <iantoniolo@hotmail.com>"]
readme = "README.md"
packages = [{include = "integration_with_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
